docs: Update the README.md file with relevant details